# k-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  bochsrc.txt  crt0.S  k-rs.ld  limine.cfg  makeiso.sh
code/: CMakeLists.txt  linker.ld
code/rust/src/: memory.rs  serial.rs  timer.rs
code/rust/src/arch/: x86_64.rs
code/rust/src/arch/x86_64/: interrupt.rs  pit.rs
code/rust/src/fs/: rootfs.rs  vfs.rs
rust/: Cargo.toml
rust/src/arch/: x86_64.rs
src/: fs.rs  io.rs  lib.rs  memory.rs  panic.rs  serial.rs  timer.rs
src/arch/: x86_64.rs
src/arch/x86_64/: interrupt.rs  pic.rs  pit.rs
src/memory/: address.rs  kernel_heap.rs
tools/: makeiso.sh
